<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fafafa"
    tools:context=".MyProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/gradientbackground"
        android:orientation="vertical">
        <ImageView
            android:src="@drawable/rock"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="150dp" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/my_name"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="21sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="310dp"
        android:layout_height="match_parent"
        android:layout_marginTop="-45dp"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@drawable/cardstyle">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:gravity="left"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_directions_black_24dp"/>
                <TextView
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/andelaBluePrimary"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/track"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="25dp"
                android:gravity="left"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_my_location_black_24dp"/>
                <TextView
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/andelaBluePrimary"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="25dp"
                android:gravity="left"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_email_black_24dp"/>
                <TextView
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/andelaBluePrimary"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="25dp"
                android:gravity="left"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_phone_black_24dp"/>
                <TextView
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/andelaBluePrimary"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="25dp"
                android:gravity="left"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/slack"/>
                <TextView
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/andelaBluePrimary"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/slack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>